# serializer version: 1
# name: test_all_entities[select.my_pool_filtration_timer_speed_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.my_pool_filtration_timer_speed_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration timer speed 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filtration timer speed 1',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_timer_speed',
    'unique_id': 'ABCDEF1234567890-filtration_timer_speed_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.my_pool_filtration_timer_speed_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Filtration timer speed 1',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.my_pool_filtration_timer_speed_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'medium',
  })
# ---
# name: test_all_entities[select.my_pool_filtration_timer_speed_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.my_pool_filtration_timer_speed_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration timer speed 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filtration timer speed 2',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_timer_speed',
    'unique_id': 'ABCDEF1234567890-filtration_timer_speed_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.my_pool_filtration_timer_speed_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Filtration timer speed 2',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.my_pool_filtration_timer_speed_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'medium',
  })
# ---
# name: test_all_entities[select.my_pool_filtration_timer_speed_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.my_pool_filtration_timer_speed_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filtration timer speed 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filtration timer speed 3',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_timer_speed',
    'unique_id': 'ABCDEF1234567890-filtration_timer_speed_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.my_pool_filtration_timer_speed_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Filtration timer speed 3',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.my_pool_filtration_timer_speed_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'slow',
  })
# ---
# name: test_all_entities[select.my_pool_pump_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'manual',
        'auto',
        'heat',
        'smart',
        'intel',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.my_pool_pump_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pump mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pump mode',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pump_mode',
    'unique_id': 'ABCDEF1234567890-pump_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.my_pool_pump_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Pump mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'manual',
        'auto',
        'heat',
        'smart',
        'intel',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.my_pool_pump_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_all_entities[select.my_pool_pump_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.my_pool_pump_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pump speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pump speed',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pump_speed',
    'unique_id': 'ABCDEF1234567890-pump_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[select.my_pool_pump_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Pump speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'slow',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.my_pool_pump_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'high',
  })
# ---
